# grido

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  algorithm.hh  algorithm_test.cc  multirange.hh  multirange_test.cc  range.hh  range_test.cc  test.hh  utility.hh
src/algorithm/: algorithm.hh  for_each.hh  reduce.hh  transform_reduce.hh
test/: CMakeLists.txt  algorithm_test.cc  range_test.cc
