add_library(grido grido.cc)
target_include_directories(grido PUBLIC /opt/homebrew/include)

if(GRIDO_BUILD_TESTS)
  foreach(testItem IN ITEMS range algorithm multirange)
    add_executable("${testItem}_test" "${testItem}_test.cc")
    target_link_libraries("${testItem}_test" PUBLIC grido Boost::ut)
    add_test(NAME "${testItem}_test" COMMAND "${testItem}_test")
  endforeach()
endif()